--- a/src/app/pages/public/shared/textohtml/textohtml.component.html
+++ b/src/app/pages/public/shared/textohtml/textohtml.component.html
@@ -1,6 +1,8 @@
 
 
-<div class="scrollbar style-4"  >
-    <div class="force-overflow" #texto style="text-align: center;"></div>
+<div class="scrollbar style-4" >
+    <div class="force-overflow"  style="text-align: left">
+    <p> {{texto}}</p>
+    </div>
 </div>
     
