--- a/src/app/pages/public/pages/principal/principal.component.html
+++ b/src/app/pages/public/pages/principal/principal.component.html
@@ -1,179 +1,245 @@
-	<!-- SECTION -->
-	<div class="section" *ngIf="postsP.length > 0">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div id="hot-post" class="row hot-post" *ngIf="postsP">
-				<div class="col-md-8 hot-post-left">
-					<!-- post -->
-					<div class="post post-thumb">
-						<a class="post-img">
-							<img [src]="postsP[0]?.images[0].imagenes[0] | image " alt="">
-						</a>
-						<div class="post-body">
-							<div
-							 class="post-category">
-								<a class="badge badge-success text-white p-1 m-1" 
-								*ngFor="let key of this.postsP[0].keywords">
-									{{ key }}
-								</a>
-							</div>
-							<h3 class="post-title title-lg">
-								<a [routerLink]="['/single' , postsP[0]._id]" >{{postsP[0].title}}</a>
-							</h3>
-							<ul class="post-meta">
-								<li><a href="author.html">{{postsP[0].autor.nombre}}</a></li>
-								<li>{{this.postsP[0].fechaPublicacion}}</li>
-							</ul>
+<!-- SECTION -->
+<div class="section" *ngIf="postsP.length > 0">
+	<!-- container -->
+	<div class="container">
+		<!-- row -->
+		<div id="hot-post" class="row hot-post" *ngIf="postsP">
+			<div class="col-md-8 hot-post-left">
+				<!-- post -->
+				<div class="post post-thumb">
+					<a class="post-img">
+						<img [src]="postsP[0]?.images[0].imagenes[0] | image " alt="">
+					</a>
+					<div class="post-body">
+						<div class="bad">
+							<a class="" *ngFor="let key of this.postsP[0].keywords">
+								{{ key }}
+							</a>
 						</div>
+						<h3 class="post-title title-lg">
+							<a [routerLink]="['/single' , postsP[0]._id]">{{postsP[0].title}}</a>
+						</h3>
+						<ul class="post-meta">
+							<li><a href="author.html">{{postsP[0].autor.nombre}}</a></li>
+							<li>{{this.postsP[0].fechaPublicacion}}</li>
+						</ul>
 					</div>
-					<!-- /post -->
 				</div>
-				<div class="col-md-4 hot-post-right">
-					<!-- post -->
-					<div class="post post-thumb">
-						<a class="post-img">
-							<img [src]="postsP[1]?.images[0].imagenes[3] | image " alt="">
-						</a>
-						<div class="post-body">
-							<div
-							 class="post-category">
-								<a class="badge badge-success text-white p-1 m-1" 
-								*ngFor="let key of this.postsP[1].keywords">
-									{{ key }}
-								</a>
-							</div>
-							<h3 class="post-title title-lg">
-								<a [routerLink]="['/single' , postsP[1]._id]" routerLinkActive="active" >{{postsP[1].title}}</a>
-							</h3>
-							<ul class="post-meta">
-								<li><a>{{postsP[1].autor.nombre}}</a></li>
-								<li>{{this.postsP[1].fechaPublicacion}}</li>
-							</ul>
-						</div>
-					</div>
-					<!-- /post -->
-
-					<!-- post -->
-					<div class="post post-thumb">
-						<a class="post-img">
-							<img [src]="postsP[2]?.images[0].imagenes[2] | image " alt="">
-						</a>
-						<div class="post-body">
-							<div
-							 class="post-category">
-								<a class="badge badge-success text-white p-1 m-1" 
-								*ngFor="let key of this.postsP[2].keywords">
-									{{ key }}
-								</a>
-							</div>
-							<h3 class="post-title title-lg">
-								<a [routerLink]="['/single' , postsP[2]._id]" >{{postsP[2].title}}</a>
-							</h3>
-							<ul class="post-meta">
-								<li><a >{{postsP[2].autor.nombre}}</a></li>
-								<li>{{this.postsP[2].fechaPublicacion}}</li>
-							</ul>
-						</div>
-					</div>
-					<!-- /post -->
-				</div>
+				<!-- /post -->
 			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /SECTION -->
-
-	<!-- SECTION -->
-	<div class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<div class="col-md-8">
-					<!-- row -->
-					<div class="row">
-						<div class="col-md-12">
-							<div class="section-title">
-								<h2 class="title">Recent posts</h2>
-							</div>
+			<div class="col-md-4 hot-post-right">
+				<!-- post -->
+				<div class="post post-thumb">
+					<a class="post-img">
+						<img [src]="postsP[1]?.images[0].imagenes[3] | image " alt="">
+					</a>
+					<div class="post-body">
+						<div class="bad">
+							<a class="p-1 m-1" *ngFor="let key of this.postsP[1].keywords">
+								{{ key }}
+							</a>
 						</div>
-						<!-- post -->
-						<div class="col-md-6" *ngFor="let post of postRecientes">
-							<div class="post">
-								<a class="post-img" [routerLink]="['/single' , post._id]"><img [src]="post.images[0].imagenes[0] | image "alt=""></a>
-								<div class="post-body">
-									<div class="post-category" style="background: transparent;">
-									<a class="badge badge-success text-white p-1 m-1" 
-									*ngFor="let key of this.post.keywords">
-										{{ key }}
-									</a>
-								</div>
-									<h3 class="post-title"><a [routerLink]="['/single' , post._id]" >{{post.title}}</a></h3>
-									<ul class="post-meta">
-										<li><a href="author.html"> {{ post.autor.nombre}} </a></li>
-										<li>{{post.fechaPublicacion}}</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<!-- /post -->
-
+						<h3 class="post-title title-lg">
+							<a [routerLink]="['/single' , postsP[1]._id]"
+								routerLinkActive="active">{{postsP[1].title}}</a>
+						</h3>
+						<ul class="post-meta">
+							<li><a>{{postsP[1].autor.nombre}}</a></li>
+							<li>{{this.postsP[1].fechaPublicacion}}</li>
+						</ul>
 					</div>
-					<!-- /row -->
-						<!-- post -->
-					 <div class="post post-row postv"
-					 *ngFor="let post of postsP; let i = index"
-					 >
-	                	<a [routerLink]="['/single' , post._id]" class="post-img" ><img [src]="post.images[0].imagenes[0] | image " alt=""></a>
-	                	<div class="post-body">
-	                		<div
-							 class="post-category">
-								<a class="badge badge-success text-white p-1 m-1" 
-								*ngFor="let key of this.post.keywords">
-									{{ key }}
-								</a>
-							</div>
-	                		<h3 class="post-title"><a [routerLink]="['/single' , post._id]" >{{post.title}}</a></h3>
-	                		<ul class="post-meta">
-	                			<li><a >John Doe</a></li>
-	                			<li>{{post.fechaPublicacion}}</li>
-							</ul>
-							 
-							<app-textohtml [text]="post.extracto" ></app-textohtml>
-						 
+				</div>
+				<!-- /post -->
 
+				<!-- post -->
+				<div class="post post-thumb">
+					<a class="post-img">
+						<img [src]="postsP[2]?.images[0].imagenes[2] | image " alt="">
+					</a>
+					<div class="post-body">
+						<div class="bad">
+							<a class="" *ngFor="let key of this.postsP[2].keywords">
+								{{ key }}
+							</a>
 						</div>
-                 </div>
-                 	<!-- /post -->
-                 
-    
+						<h3 class="post-title title-lg">
+							<a [routerLink]="['/single' , postsP[2]._id]">{{postsP[2].title}}</a>
+						</h3>
+						<ul class="post-meta">
+							<li><a>{{postsP[2].autor.nombre}}</a></li>
+							<li>{{this.postsP[2].fechaPublicacion}}</li>
+						</ul>
+					</div>
+				</div>
+				<!-- /post -->
+			</div>
+		</div>
+		<!-- /row -->
+	</div>
+	<!-- /container -->
+</div>
+<!-- /SECTION -->
 
-             	<div class="section-row loadmore text-center">
-             		<a href="#" class="primary-button">Load More</a>
-			  </div>
-			  	<!-- ad -->
-			<div class="row section-row text-center">
-				<a href="#" style="display: inline-block;margin: auto;">
-					<img class="img-responsive" src="assets/images/ad-2.jpg" alt="">
+<!-- SECTION -->
+<div class="section">
+	<!-- container -->
+	<div class="contenedor">
+		<!-- row -->
+		<div class="row">
+			<div class="col-md-8">
+				<!-- row -->
+				<div class="row">
+					<!-- <div class="col-md-12"> -->
+					<!-- ============================================================== -->
+					<!-- --------------------------post con relevancia --------------- -->
+					<!-- ============================================================== -->
+					<div class="col-md-12">
+						<div class="title">
+							<h1>Posts recientes</h1>
+						</div>
+						<div class="posts">
+							<div class="post-content" *ngFor="let post of postRecientes">
+								<div class="post-image">
+									<div>
+										<a [routerLink]="['/single' , post._id]">
+											<img [src]="post.images[0].imagenes[1] | image" class="img" alt="blo1"></a>
+									</div>
+									<div class="post-info flex-row">
+										<span><i class="fas fa-user text-gray"></i>&nbsp;&nbsp;{{post.autor.nombre}}
+										</span>
+										<span><i class="fas fa-calendar-alt text-gray"></i>&nbsp;&nbsp;
+											{{post.fechaPublicacion}}</span>
+										<span><i class="fas fa-eye"></i> 500</span>
+										<!-- <span> <i class="fas fa-comments"></i> 2 </span> -->
+
+									</div>
+								</div>
+								<div class="post-title">
+									<a href="#">{{post.title}}</a>
+									<p>{{post.extracto}}</p>
+									<button class="btn post-btn">
+										Read more &nbsp; <i class="fas fa-arrow-right"></i>
+									</button>
+								</div>
+
+							</div>
+						</div>
+					</div>
+					<!-- ============================================================== -->
+					<!-- ---------------fin post con relevancia --------------------------- -->
+					<!-- ==============================================================-->
+
+					<!-- <div class="section-title">
+								<h2 class="title">posts recientes</h2>
+							</div> -->
+					<!-- </div> -->
+					<!-- post -->
+					<!-- <div class="col-md-6" *ngFor="let post of postRecientes">
+	<div class="post">
+		<a class="post-img" [routerLink]="['/single' , post._id]"><img [src]="post.images[0].imagenes[0] | image "
+				alt=""></a>
+		<div class="post-body">
+			<div class="post-category" style="background: transparent;">
+				<a class="badge badge-success text-white p-1 m-1" *ngFor="let key of this.post.keywords">
+					{{ key }}
 				</a>
 			</div>
-			<!-- /ad -->
+			<h3 class="post-title"><a [routerLink]="['/single' , post._id]">{{post.title}}</a></h3>
+			<ul class="post-meta">
+				<li><a href="author.html"> {{ post.autor.nombre}} </a></li>
+				<li>{{post.fechaPublicacion}}</li>
+			</ul>
+		</div>
+	</div>
+</div>		 -->
+					<!-- /post -->
+					<!-- ============================================================== -->
+					<!-- --------------------------posts parte baja --------------- -->
+					<!-- ============================================================== -->
+					<div class="post-d">
+						<div class="post" *ngFor="let post of postRecientes">
+							<div class="head">
+								<div>
+									<a [routerLink]="['/single' , post._id]" class="post-img">
+										<img [src]="post.images[0].imagenes[0] | image">
+									</a>
+								</div>
+							</div>
+							<div class="body">
+								<div class="titulo">
+									<h1>
+										<a href="">{{post.title}}</a>
+									</h1>
+								</div>
+								<p>
+									{{post.extracto}}
+								</p>
+							</div>
+						</div>
+
+
+					</div>
+
+					<!-- ============================================================== -->
+					<!-- ---------------fin posts parte baja --------------------------- -->
+					<!-- ==============================================================-->
 				</div>
-              <!-- ============================================================== -->
-              <!-- --------------------------aside html --------------- -->
-              <!-- ============================================================== -->
-            <div class="col-md-4">
+				<!-- /row -->
+
+				<!-- post -->
+				<div class="post post-row postv" *ngFor="let post of lastPosts; let i = index">
+					<a [routerLink]="['/single' , post._id]" class="post-img"><img
+							[src]="post.images[0].imagenes[0] | image" alt=""></a>
+					<div class="post-body">
+						<div class="">
+							<a class="etiqueta" *ngFor="let key of this.post.keywords">
+								{{ key }}
+							</a>
+						</div>
+						<h3 class="post-title"><a [routerLink]="['/single' , post._id]">{{post.title}}</a></h3>
+						<ul class="post-meta">
+							<li><a>John Doe</a></li>
+							<li>{{post.fechaPublicacion}}</li>
+						</ul>
+
+						<app-textohtml [text]="post.extracto"></app-textohtml>
+					</div>
+				</div>
+				<!-- /post -->
+
+
+
+				<div class="section-row loadmore text-center">
+					<nav aria-label="Page navigation example" class="text-center">
+						<ul class="pagination pag" style="padding-left: 50%;">
+							<li class="page-item"><a class="page-link" href="#">anterior</a></li>
+							<li class="page-item"><a class="page-link" href="#">1</a></li>
+							<li class="page-item"><a class="page-link" href="#">2</a></li>
+							<li class="page-item"><a class="page-link" href="#">3</a></li>
+							<li class="page-item"><a class="page-link" href="#">siguiente</a></li>
+						</ul>
+					</nav>
+				</div>
+				<!-- ad -->
+				<div class="row section-row text-center">
+					<a href="#" style="display: inline-block;margin: auto;">
+						<img class="img-responsive" src="assets/images/ad-2.jpg" alt="">
+					</a>
+				</div>
+				<!-- /ad -->
+			</div>
+			<!-- ============================================================== -->
+			<!-- --------------------------aside html --------------- -->
+			<!-- ============================================================== -->
+			<div class="col-md-4">
 				<app-sidebar></app-sidebar>
 			</div>
-<!-- ============================================================== -->
-<!-- ---------------fin aside html --------------------------- -->
-<!-- ==============================================================-->
-           </div>
-<!-- /row -->
+			<!-- ============================================================== -->
+			<!-- ---------------fin aside html --------------------------- -->
+			<!-- ==============================================================-->
+		</div>
+		<!-- /row -->
+	</div>
+	<!-- /container -->
 </div>
-<!-- /container -->
-   </div>
-    <!-- /SECTION -->
-
+<!-- /SECTION -->
