--- a/src/app/pages/public/shared/sidebar/sidebar.component.html
+++ b/src/app/pages/public/shared/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
 	<!-- social widget -->
 	<div class="aside-widget">
 		<div class="section-title">
-			<h2 class="title">Social Media</h2>
+			<h2 class="title">aquinomas</h2>
 		</div>
 		<div class="social-widget">
 			<ul>
@@ -39,15 +39,17 @@
 	<!-- category widget -->
 	<div class="aside-widget">
 		<div class="section-title">
-			<h2 class="title">Categories</h2>
+			<h2 class="title">Categorias</h2>
 		</div>
 		<div class="category-widget">
 			<ul>
-				<li><a href="#">Lifestyle <span>451</span></a></li>
-				<li><a href="#">Fashion <span>230</span></a></li>
+				<li
+				*ngFor="let categoria of categorias" 
+				><a href="#">{{categoria.nombre}} <span>451</span></a></li>
+				<!-- <li><a href="#">Fashion <span>230</span></a></li>
 				<li><a href="#">Technology <span>40</span></a></li>
 				<li><a href="#">Travel <span>38</span></a></li>
-				<li><a href="#">Health <span>24</span></a></li>
+				<li><a href="#">Health <span>24</span></a></li> -->
 			</ul>
 		</div>
 	</div>
@@ -124,24 +126,6 @@
 		<!-- /post -->
 	</div>
 	<!-- /post widget -->
-			<!-- galery widget -->
-			<div class="aside-widget">
-				<div class="section-title">
-					<h2 class="title">Instagram</h2>
-				</div>
-				<div class="galery-widget">
-					<ul>
-						<li><a href="#"><img src="assets/images/galery-1.jpg" alt=""></a></li>
-						<li><a href="#"><img src="assets/images/galery-2.jpg" alt=""></a></li>
-						<li><a href="#"><img src="assets/images/galery-3.jpg" alt=""></a></li>
-						<li><a href="#"><img src="assets/images/galery-4.jpg" alt=""></a></li>
-						<li><a href="#"><img src="assets/images/galery-5.jpg" alt=""></a></li>
-						<li><a href="#"><img src="assets/images/galery-6.jpg" alt=""></a></li>
-					</ul>
-				</div>
-			</div>
-			<!-- /galery widget -->
-			
 			<!-- Ad widget -->
 			<div class="aside-widget text-center">
 				<a href="#" style="display: inline-block;margin: auto;">
@@ -149,3 +133,80 @@
 				</a>
 			</div>
 			<!-- /Ad widget -->
+
+			<div class="post-d">
+				<div class="post">
+					<div class="head">
+						<div>
+						<a>
+							<img src="assets/images/post-4.jpg" >  
+						</a>
+						</div>
+					</div>
+					 <div class="body">
+						 <div class="titulo">
+							  <h1>
+								  <a href="">la naturaleza un gran cambio</a>
+							  </h1>
+						 </div>
+						 <p>
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+						 </p>
+					 </div>
+			   </div>
+				<div class="post">
+					<div class="head">
+						<div>
+						<a>
+							<img src="assets/images/post-4.jpg" >  
+						</a>
+						</div>
+					</div>
+					 <div class="body">
+						 <div class="titulo">
+							  <h1>
+								  <a href="">la naturaleza un gran cambio</a>
+							  </h1>
+						 </div>
+						 <p>
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+						 </p>
+					 </div>
+			   </div>
+				<div class="post">
+					<div class="head">
+						<div>
+						<a>
+							<img src="assets/images/post-4.jpg" >  
+						</a>
+						</div>
+					</div>
+					 <div class="body">
+						 <div class="titulo">
+							  <h1>
+								  <a href="">la naturaleza un gran cambio</a>
+							  </h1>
+						 </div>
+						 <p>
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+							 Lorem ipsum dolor sit amet.
+						 </p>
+					 </div>
+			   </div>
+			
+		
+			 </div>
