--- a/src/assets/css/stylePublic.css
+++ b/src/assets/css/stylePublic.css
@@ -839,7 +839,17 @@ textarea.input {
 .hot-post {
   margin-bottom: 25px;
 }
+.bad{
+   color: white;
+   font-size: 1.1rem;
+}
+.bad a{
+   padding: 0;
 
+}
+.bad a::after{
+  content: "-";
+}
 /*----------------------------*\
 	post thumb
 \*----------------------------*/
