--- a/src/app/pages/public/shared/sidebar/sidebar.component.html
+++ b/src/app/pages/public/shared/sidebar/sidebar.component.html
@@ -1,212 +1,136 @@
-	<!-- ad widget-->
-	<div class="aside-widget text-center">
-		<a href="#" style="display: inline-block;margin: auto;">
-			<img class="img-responsive" src="assets/images/ad-3.jpg" alt="">
-		</a>
-	</div>
-	<!-- /ad widget -->
+<!-- ad widget-->
+<div class="aside-widget text-center">
+	<a href="#" style="display: inline-block;margin: auto;">
+		<img class="img-responsive" src="assets/images/ad-3.jpg" alt="">
+	</a>
+</div>
+<!-- /ad widget -->
 
-	<!-- social widget -->
-	<div class="aside-widget">
-		<div class="section-title">
-			<h2 class="title">aquinomas</h2>
-		</div>
-		<div class="social-widget">
-			<ul>
-				<li>
-					<a href="#" class="social-facebook">
-						<i class="fab fa-facebook-f"></i>
-						<span>21.2K<br>Followers</span>
-					</a>
-				</li>
-				<li>
-					<a href="#" class="social-twitter">
-						<i class="fab fa-twitter"></i>
-						<span>10.2K<br>Followers</span>
-					</a>
-				</li>
-				<li>
-					<a href="#" class="social-google-plus">
-						<i class="fab fa-google-plus"></i>
-						<span>5K<br>Followers</span>
-					</a>
-				</li>
-			</ul>
-		</div>
+<!-- social widget -->
+<div class="aside-widget">
+	<div class="section-title">
+		<h2 class="title">aquinomas</h2>
 	</div>
-	<!-- /social widget -->
+	<div class="social-widget">
+		<ul>
+			<li>
+				<a href="#" class="social-facebook">
+					<i class="fab fa-facebook-f"></i>
+					<span>21.2K<br>Followers</span>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="social-twitter">
+					<i class="fab fa-twitter"></i>
+					<span>10.2K<br>Followers</span>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="social-google-plus">
+					<i class="fab fa-google-plus"></i>
+					<span>5K<br>Followers</span>
+				</a>
+			</li>
+		</ul>
+	</div>
+</div>
+<!-- /social widget -->
 
-	<!-- category widget -->
-	<div class="aside-widget">
-		<div class="section-title">
-			<h2 class="title">Categorias</h2>
-		</div>
-		<div class="category-widget">
-			<ul>
-				<li
-				*ngFor="let categoria of categorias" 
-				><a href="#">{{categoria.nombre}} <span>451</span></a></li>
-				<!-- <li><a href="#">Fashion <span>230</span></a></li>
+<!-- category widget -->
+<div class="aside-widget">
+	<div class="section-title">
+		<h2 class="title">Categorias</h2>
+	</div>
+	<div class="category-widget">
+		<ul>
+			<li *ngFor="let categoria of categorias"><a href="#">{{categoria.nombre}} <span>451</span></a></li>
+			<!-- <li><a href="#">Fashion <span>230</span></a></li>
 				<li><a href="#">Technology <span>40</span></a></li>
 				<li><a href="#">Travel <span>38</span></a></li>
 				<li><a href="#">Health <span>24</span></a></li> -->
-			</ul>
-		</div>
+		</ul>
 	</div>
-	<!-- /category widget -->
-	
-	<!-- newsletter widget -->
-	<div class="aside-widget">
-		<div class="section-title">
-			<h2 class="title">Newsletter</h2>
-		</div>
-		<div class="newsletter-widget">
-			<form>
-				<p>Nec feugiat nisl pretium fusce id velit ut tortor pretium.</p>
-				<input class="input" name="newsletter" placeholder="Enter Your Email">
-				<button class="primary-button">Subscribe</button>
-			</form>
-		</div>
-	</div>
-	<!-- /newsletter widget -->
-	
-	<!-- post widget -->
-	<div class="aside-widget">
-		<div class="section-title">
-			<h2 class="title">Popular Posts</h2>
-		</div>
-		<!-- post -->
-		<div class="post post-widget">
-			<a class="post-img" href="blog-post.html"><img src="assets/images/widget-3.jpg" alt=""></a>
-			<div class="post-body">
-				<div class="post-category">
-					<a href="category.html">Lifestyle</a>
-				</div>
-				<h3 class="post-title"><a href="blog-post.html">Ne bonorum praesent cum, labitur persequeris definitionem quo cu?</a></h3>
-			</div>
-		</div>
-		<!-- /post -->
-		
-		<!-- post -->
-		<div class="post post-widget">
-			<a class="post-img" href="blog-post.html"><img src="assets/images/widget-2.jpg" alt=""></a>
-			<div class="post-body">
-				<div class="post-category">
-					<a href="category.html">Technology</a>
-					<a href="category.html">Lifestyle</a>
-				</div>
-				<h3 class="post-title"><a href="blog-post.html">Mel ut impetus suscipit tincidunt. Cum id ullum laboramus persequeris.</a></h3>
-			</div>
-		</div>
-		<!-- /post -->
-		
-		<!-- post -->
-		<div class="post post-widget">
-			<a class="post-img" href="blog-post.html"><img src="assets/images/widget-4.jpg" alt=""></a>
-			<div class="post-body">
-				<div class="post-category">
-					<a href="category.html">Health</a>
-				</div>
-				<h3 class="post-title"><a href="blog-post.html">Postea senserit id eos, vivendo periculis ei qui</a></h3>
-			</div>
-		</div>
-		<!-- /post -->
-		
-		<!-- post -->
-		<div class="post post-widget">
-			<a class="post-img" href="blog-post.html"><img src="assets/images/widget-5.jpg" alt=""></a>
-			<div class="post-body">
-				<div class="post-category">
-					<a href="category.html">Health</a>
-					<a href="category.html">Lifestyle</a>
-				</div>
-				<h3 class="post-title"><a href="blog-post.html">Sed ut perspiciatis, unde omnis iste natus error sit</a></h3>
-			</div>
-		</div>
-		<!-- /post -->
-	</div>
-	<!-- /post widget -->
-			<!-- Ad widget -->
-			<div class="aside-widget text-center">
-				<a href="#" style="display: inline-block;margin: auto;">
-					<img class="img-responsive" src="assets/images/ad-1.jpg" alt="">
-				</a>
-			</div>
-			<!-- /Ad widget -->
+</div>
+<!-- /category widget -->
 
-			<div class="post-d">
-				<div class="post">
-					<div class="head">
-						<div>
-						<a>
-							<img src="assets/images/post-4.jpg" >  
-						</a>
-						</div>
-					</div>
-					 <div class="body">
-						 <div class="titulo">
-							  <h1>
-								  <a href="">la naturaleza un gran cambio</a>
-							  </h1>
-						 </div>
-						 <p>
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-						 </p>
-					 </div>
-			   </div>
-				<div class="post">
-					<div class="head">
-						<div>
-						<a>
-							<img src="assets/images/post-4.jpg" >  
-						</a>
-						</div>
-					</div>
-					 <div class="body">
-						 <div class="titulo">
-							  <h1>
-								  <a href="">la naturaleza un gran cambio</a>
-							  </h1>
-						 </div>
-						 <p>
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-						 </p>
-					 </div>
-			   </div>
-				<div class="post">
-					<div class="head">
-						<div>
-						<a>
-							<img src="assets/images/post-4.jpg" >  
-						</a>
-						</div>
-					</div>
-					 <div class="body">
-						 <div class="titulo">
-							  <h1>
-								  <a href="">la naturaleza un gran cambio</a>
-							  </h1>
-						 </div>
-						 <p>
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-							 Lorem ipsum dolor sit amet.
-						 </p>
-					 </div>
-			   </div>
-			
-		
-			 </div>
+<!-- newsletter widget -->
+<div class="aside-widget">
+	<div class="section-title">
+		<h2 class="title">Suscribete</h2>
+	</div>
+	<div class="newsletter-widget">
+		<form>
+			<p>reccibe noticias sobre los nuevos posts</p>
+			<input class="input" name="newsletter" placeholder="Enter Your Email">
+			<button class="primary-button">Subscribirse</button>
+		</form>
+	</div>
+</div>
+<!-- /newsletter widget -->
+
+<!-- post widget -->
+<div class="aside-widget">
+	<div class="section-title">
+		<h2 class="title">Popular Posts</h2>
+	</div>
+	<!-- post -->
+	<div class="post post-widget">
+		<a class="post-img" href="blog-post.html"><img src="assets/images/widget-3.jpg" alt=""></a>
+		<div class="post-body">
+			<div class="post-category">
+				<a href="category.html">Lifestyle</a>
+			</div>
+			<h3 class="post-title"><a href="blog-post.html">Ne bonorum praesent cum, labitur persequeris definitionem
+					quo cu?</a></h3>
+		</div>
+	</div>
+	<!-- /post -->
+
+	<!-- post -->
+	<div class="post post-widget">
+		<a class="post-img" href="blog-post.html"><img src="assets/images/widget-2.jpg" alt=""></a>
+		<div class="post-body">
+			<div class="post-category">
+				<a href="category.html">Technology</a>
+				<a href="category.html">Lifestyle</a>
+			</div>
+			<h3 class="post-title"><a href="blog-post.html">Mel ut impetus suscipit tincidunt. Cum id ullum laboramus
+					persequeris.</a></h3>
+		</div>
+	</div>
+	<!-- /post -->
+
+	<!-- post -->
+	<div class="post post-widget">
+		<a class="post-img" href="blog-post.html"><img src="assets/images/widget-4.jpg" alt=""></a>
+		<div class="post-body">
+			<div class="post-category">
+				<a href="category.html">Health</a>
+			</div>
+			<h3 class="post-title"><a href="blog-post.html">Postea senserit id eos, vivendo periculis ei qui</a></h3>
+		</div>
+	</div>
+	<!-- /post -->
+
+	<!-- post -->
+	<div class="post post-widget">
+		<a class="post-img" href="blog-post.html"><img src="assets/images/widget-5.jpg" alt=""></a>
+		<div class="post-body">
+			<div class="post-category">
+				<a href="category.html">Health</a>
+				<a href="category.html">Lifestyle</a>
+			</div>
+			<h3 class="post-title"><a href="blog-post.html">Sed ut perspiciatis, unde omnis iste natus error sit</a>
+			</h3>
+		</div>
+	</div>
+	<!-- /post -->
+</div>
+<!-- /post widget -->
+<!-- Ad widget -->
+<div class="aside-widget text-center">
+	<a href="#" style="display: inline-block;margin: auto;">
+		<img class="img-responsive" src="assets/images/ad-1.jpg" alt="">
+	</a>
+</div>
+<!-- /Ad widget -->
