--- a/src/app/pages/private/pages/edit-post/edit-post.component.html
+++ b/src/app/pages/private/pages/edit-post/edit-post.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <h2 class="titulo">Galeria</h2>
         </div>
-       <div class="col-md-12" style="height: 35vh;">
+       <!-- <div class="col-md-12" style="height: 35vh;">
         
               <div class="card-body">
                   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -18,7 +18,7 @@
              </div>
            
         
-       </div>
+       </div> -->
        <div class="col-md-12 galery">
           <!-- ============================================================== -->
           <!-- ------------------------- galeria --------------- -->
